# scitos_common

scitos_common/: CMakeLists.txt
scitos_description/: CMakeLists.txt
scitos_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
scitos_msgs/msg/: MotorStatus.msg
