<?xml version="1.0"?>
<package format="2">
  <name>scitos_msgs</name>
  <version>0.1.15</version>
  <description>Messages for the Scitos-G5 using the MIRA framework.</description>
  <maintainer email="cburbridge@gmail.com">cburbridge</maintainer>
  <author email="cburbridge@gmail.com">cburbridge</author>
  <author email="tkrajnik@lincoln.ac.uk">Tom Krajnik</author>
  <author email="ajtudela@gmail.com">Alberto Tudela</author>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>



